@@ -31,6 +31,8 @@ Version 5.1.3 -
     (bug #29476)
   - Commandbuilder now defaults ReturnGeneratedIdentifiers to true.  This means that autogenerated
     columns will be returned in the default case.
+  - Exceptions generated during BeginExecuteReader and BeginExecuteNonQuery will now ben thrown
+    once the End versions of those methods are called.
 
 Version 5.1.2 - 6/12/2007
   - Fixed integration with the Website Administration Tool.  Before this fix, the test link
